crates/analyzer/tests/snapshots/errors__not_callable.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `u256` type is not callable
  ┌─ compile_errors/not_callable.fe:3:9
  │
3 │         5()
  │         ^ this has type `u256`

error: `self` is not callable
  ┌─ compile_errors/not_callable.fe:7:9
  │
7 │         self()
  │         ^^^^ can't be used as a function


